// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prisma-merge-normal > merge prisma all 1`] = `
"// *** GENERATED BY next-prisma :: DO NOT EDIT ***
model User {
	id String @unique
	content String 
	desc String 
	name String 
}
model Post {
	id String @unique
	name String 
	createdAt DateTime @default(now())
	updatedAt DateTime @default(now()) @updatedAt
}"
`;

exports[`prisma-merge-normal > merge prisma test 1 1`] = `
"// *** GENERATED BY next-prisma :: DO NOT EDIT ***
model User {
	id String @unique
	content Int 
	desc String 
	name String 
}
model Post {
	id String @unique
	name String 
	createdAt DateTime @default(now())
	updatedAt DateTime @default(now()) @updatedAt
}"
`;

exports[`prisma-merge-normal > merge prisma test 2 1`] = `
"// *** GENERATED BY next-prisma :: DO NOT EDIT ***
model User {
	id String @unique
	name String 
	content String 
}"
`;
